--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=gQHaSX"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=gQHaSX" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=dUWiXP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=dUWiXP" type="text/css">
 
   
   
@@ -279,7 +279,7 @@
     </div>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-6 align-center col-lg-3">
+            <div class="col-12 col-md-6 align-center col-lg-4">
                 <div class="plan">
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>Students and graduates of 2025</strong></h6>
@@ -297,7 +297,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 align-center col-lg-3">
+            <div class="col-12 col-md-6 align-center col-lg-4">
                 <div class="plan">
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>PEVA, BEVA, FEEVA members</strong></h6>
@@ -316,12 +316,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 align-center col-lg-3">
+            <div class="col-12 col-md-6 align-center col-lg-4">
                 <div class="plan">
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-5">
-                            <strong>Others</strong>
-                        </h6>
+                            <strong>Non-members</strong></h6>
                         <div class="plan-price">
                             <p class="price mbr-fonts-style m-0 display-7">1600 PLN* 
 <br>1900 PLN**<br></p>
@@ -337,25 +336,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 align-center col-lg-3">
-                <div class="plan">
-                    <div class="plan-header">
-                        <h6 class="plan-title mbr-fonts-style mb-3 display-5"><strong>International participants</strong></h6>
-                        <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-7">1600 PLN*
-<br>1900 PLN**<br></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
-                        </div>
-                    </div>
-                    <div class="plan-body">
-                        <div class="plan-list mb-4">
-                            <ul class="list-group mbr-fonts-style list-group-flush display-7">*(payment by 15.10.2025)
-<div>**(payment from 16.10.2025)</div></ul>
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 </section>
@@ -624,7 +605,7 @@ Magdalena Podsobińska, DVM<br>+48 608 170 250<br>magdalena.podsobinska@gmail.co
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3334087" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3334087" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
